Issue 236001 (submitted by KITec Inc.)
git-svn-id: http://xmlvm.svn.sourceforge.net/svnroot/xmlvm/trunk/xmlvm@2310 0874c2aa-48f6-4a0f-8a6b-e32f4465a257